completed the async with promises POC

--- a/sample_apps/6-async-promises/src/app/dashboard/dashboard.component.html
+++ b/sample_apps/6-async-promises/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
       <p>{{feedback}}</p>
     </div>
     <div class="col-8">
-        <app-esri-map (wonderMapped)="enablePanel()"></app-esri-map>
+        <app-esri-map></app-esri-map>
     </div>
   </div>
 </div>
