add sample 2 files

--- a/sample_apps/2-more-app-scaffolding/src/app/app.component.css
+++ b/sample_apps/2-more-app-scaffolding/src/app/app.component.css
@@ -1,13 +1,4 @@
-.eds-header{
-  height: 60px;
-  margin: 30px 0;
+.title {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
-
-.eds-nav{
-
-}
-
-.eds-body{
-
-}
-
