--- a/sample_apps/6-async-events/src/app/dashboard/dashboard.component.html
+++ b/sample_apps/6-async-events/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row eds-header">
+  <div class="row">
     <div class="col-4">
         <h5>Select a World Wonder</h5>
         <select name="wonders" id="wonders" (input)="selectedWonder($event)" [disabled]="selectorDisabled">
