cleaned up sample 7 dashboard template

--- a/sample_apps/7-async-observables/src/app/dashboard/dashboard.component.html
+++ b/sample_apps/7-async-observables/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
       <app-control-panel></app-control-panel>
     </div>
     <div class="col-8">
-        <app-esri-map (wonderMapped)="enablePanel()"></app-esri-map>
+        <app-esri-map></app-esri-map>
     </div>
   </div>
 </div>
